[package]
name = "highlight-pulldown"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Process pulldown-cmark events to apply syntax highlighting to code blocks"
homepage = "https://crates.io/crates/highlight-pulldown"
repository = "https://gitlab.com/eguiraud/highlight-pulldown"
keywords = ["markdown", "highlighter", "syntax-highlighting"]
categories = ["text-processing"]

[dependencies]
syntect = "5.0.0"
pulldown-cmark = "0.9.3"
thiserror = "1.0.43"
